crates/ladder_types/tests/ui/generated/should_fail/test__kiss_ladder__R0_plus_R0.rs

use ladder_types::kiss_ladder::*;

fn main() {
   let _ = R0::new() + R0::new();
}
